Test/datatypes/duplicate_constructor.bpl.expect
duplicate_constructor.bpl(6,12): error: constructor name Left used more than once in datatype
1 parse errors detected in duplicate_constructor.bpl
